--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ button{
 
     <!-- Logo -->
     <div class="logo">
-        <img src="images/logo.jpg" alt="3X Profit">
+        <img src="Screenshot_20260116-185314.png" alt="3X Profit">
     </div>
 
     <!-- Tabs -->
